Time: 12 ms (10.88%), Space: 49.2 MB (52.42%) - LeetHub